--- a/wasp-core/src/main/resources/reference-environment.conf
+++ b/wasp-core/src/main/resources/reference-environment.conf
@@ -27,7 +27,9 @@ kafka {
   default-encoder = "kafka.serializer.DefaultEncoder"
   encoder-fqcn = "kafka.serializer.StringEncoder"
   decoder-fqcn = "kafka.serializer.StringDecoder"
-  batch-send-size = 100
+  batch-send-size = 100,
+  partitions = 3,
+  replicas = 1
 }
 
 spark-streaming {
