Kafka topic conf

--- a/wasp-core/src/main/resources/reference-environment.conf
+++ b/wasp-core/src/main/resources/reference-environment.conf
@@ -27,9 +27,7 @@ kafka {
   default-encoder = "kafka.serializer.DefaultEncoder"
   encoder-fqcn = "kafka.serializer.StringEncoder"
   decoder-fqcn = "kafka.serializer.StringDecoder"
-  batch-send-size = 100,
-  partitions = 3,
-  replicas = 1
+  batch-send-size = 100
 }
 
 spark-streaming {
