Fixed misconfiguration in the volume section of the kafka service

--- a/docker/externalizable-services-docker-compose.yml
+++ b/docker/externalizable-services-docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - "9092:9092"
     volumes:
-      - "./data/kafka:/kafka/kafka-logs-9092"
+      - "./data/kafka:/kafka/"
 
   spark-master:
     image: gettyimages/spark:1.6.2-hadoop-2.6
