--- a/wasp-core/src/main/resources/reference-environment.conf
+++ b/wasp-core/src/main/resources/reference-environment.conf
@@ -31,29 +31,47 @@ kafka {
 }
 
 spark-streaming {
+  app-name = "WASP-streaming"
   master = {
     protocol = ""
     host = "local[*]"
     port = 0
   }
+  driver-cores = 4
+  driver-memory = "2G"
+  driver-hostname = "localhost"
+  driver-port = 0
+  executor-cores = "4"
+  executor-memory = "2G"
+  executor-instances = "1"
+  yarn-jar = "./spark-lib/spark-assembly.jar"
   cleaner-ttl = 7200
+  block-manager-port = 0
+  broadcast-port = 0
+  fileserver-port = 0
   streaming-batch-interval-ms = 1000
   checkpoint-dir = "./tmp"
-  executor-memory = "2G"
-  driver-hostname = "localhost"
-  yarn-jar = "./spark-lib/spark-assembly.jar"
 }
 
 spark-batch {
+  app-name = "WASP-batch"
   master = {
     protocol = ""
     host = "local[*]"
     port = 0
   }
-  cleaner-ttl = 7200
-  executor-memory = "2G"
+  driver-cores = "4"
+  driver-memory = "2G"
   driver-hostname = "localhost"
+  driver-port = 0
+  executor-cores = "4"
+  executor-memory = "2G"
+  executor-instances = "1"
   yarn-jar = "./spark-lib/spark-assembly.jar"
+  cleaner-ttl = 7200
+  block-manager-port = 0
+  broadcast-port = 0
+  fileserver-port = 0
 }
 
 elastic {
