Remove hardcoded config, all-caps name for actor system

--- a/wasp-core/src/main/resources/reference-application.conf
+++ b/wasp-core/src/main/resources/reference-application.conf
@@ -29,7 +29,7 @@ akka {
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
-      port = 0
+      port = 2551
       hostname = "localhost"
     }
   }
@@ -40,7 +40,7 @@ akka {
 
   cluster {
     log-info = on
-    seed-nodes = ["akka.tcp://Wasp@localhost:2551"]
+    seed-nodes = ["akka.tcp://WASP@localhost:2551"]
     gossip-interval = 5s
     publish-stats-interval = 10s
     auto-down-unreachable-after = 10s
