Configure Reactivemongo and Play actor systems properly

--- a/wasp-core/src/main/resources/reference-application.conf
+++ b/wasp-core/src/main/resources/reference-application.conf
@@ -7,11 +7,11 @@ systempipegraphs.start=false
 no_timeout = "false"
 
 default {
-  timeout = 60s,
-  timeout-services = 5000,
+  timeout = 60s
+  timeout-services = 5000
   additionalJars {
     path: "./spark-lib"
-  },
+  }
   datastore {
     indexed = "elastic"
     keyvalue = ""
@@ -46,5 +46,40 @@ akka {
     auto-down-unreachable-after = 10s
     metrics.gossip-interval = 10s
     metrics.collect-interval = 10s
+  }
+}
+
+mongo-async-driver {
+  akka {
+    remote {
+      netty {
+        tcp {
+          hostname = "localhost"
+          port = 0
+        }
+      }
+    }
+  }
+}
+
+play {
+  akka {
+    # The name of the actor system that Play creates
+    # actor-system = "WASP-Play"
+    # The location to read Play's Akka configuration from
+    # Stupid path due to https://github.com/playframework/playframework/issues/6183
+    config = "play.akka-config"
+  }
+  akka-config {
+    akka {
+      remote {
+        netty {
+          tcp {
+            hostname = "localhost"
+            port = 0
+          }
+        }
+      }
+    }
   }
 }
